# neuravox

./: .envrc  .gitignore  CLAUDE.md  INTEGRATION.md  NEURAVOX_MIGRATION.md  Phase_1.md  README.md  RESTRUCTURING.md  RESTRUCTURING_IMPLEMENTATION.md  config.yaml  neuravox.py  pyproject.toml  run_tests.py  test_api.py
ai_transcriber/: .gitignore  README.md  pyproject.toml
ai_transcriber/src/: cli.py  config.py  transcriber.py
ai_transcriber/src/models/: ollama.py
api_tests/: README.md  hurl_6.1.1_amd64.deb
api_tests/environments/: dev.env  staging.env
api_tests/hurl/requests/auth/: list-api-keys.hurl
api_tests/hurl/requests/files/: download-file.hurl
api_tests/hurl/requests/jobs/: create-job.hurl  list-jobs.hurl
api_tests/hurl/requests/processing/: transcribe-only.hurl
api_tests/hurl/requests/system/: config.hurl  health-check.hurl  models.hurl
api_tests/hurl/workflows/: smoke-test.hurl
api_tests/scripts/: run-full.sh  run-smoke.sh  run-tests.sh
api_tests/test-data/: .gitkeep
audio_processor/: .gitignore  INSTALL.md  README.md  USER_GUIDE.md  audio_splitter.py  audio_splitter_cli.py  audio_splitter_config.yaml  pyproject.toml  run.py
config/: prompts.toml
docs/man/: install-man-pages.sh  neuravox-config.1  neuravox-convert.1  neuravox-init.1  neuravox-pipeline.1  neuravox-process.1  neuravox-resume.1  neuravox-status.1  neuravox-transcribe.1  neuravox.1
neuravox/: .env.example  .gitignore  CLAUDE.md  INSTALLATION.md  README.md  README_VENV.md  TODO.md  WHISPER_MIGRATION.md  WORK_COMPLETED.md  __init__.py  constants.py  neuravox.py  pyproject.toml  pytest.ini  run_tests.py
neuravox-api-tests/: .gitignore
neuravox-api-tests/environments/: common.env  prod.env  shared.env
neuravox-api-tests/hurl/requests/auth/: create-api-key.hurl  delete-api-key.hurl  get-user-info.hurl
neuravox-api-tests/hurl/requests/files/: delete-file.hurl  get-file-metadata.hurl  list-files.hurl  list-workspace-files.hurl  upload-file.hurl
neuravox-api-tests/hurl/requests/jobs/: cancel-job.hurl  create-job.hurl  get-job-status.hurl  retry-job.hurl
neuravox-api-tests/hurl/requests/processing/: full-pipeline.hurl  process-only.hurl
neuravox-api-tests/hurl/requests/system/: status.hurl
neuravox-api-tests/hurl/workflows/: full-workflow.hurl
neuravox-api-tests/scripts/: run-full.sh
neuravox/api/: __init__.py  main.py
neuravox/api/middleware/: __init__.py  auth.py  rate_limit.py  request_context.py
neuravox/api/models/: __init__.py  database.py  enums.py  requests.py  responses.py
neuravox/api/routers/: auth.py  config.py  files.py  health.py  jobs.py  processing.py  workspace.py
neuravox/api/services/: __init__.py  auth_service.py  file_service.py  job_service.py  pipeline_service.py
neuravox/api/utils/: __init__.py  exceptions.py
neuravox/cli/: display.py  interactive.py  main.py  utils.py
neuravox/cli/commands/: __init__.py  config.py  serve.py  workspace.py
neuravox/config/: config.template.yaml  default.yaml  prompts.toml
neuravox/core/: exceptions.py  pipeline.py
neuravox/db/: __init__.py  database.py
neuravox/db/migrations/: add_error_context.py
neuravox/docs/man/: README.md  neuravox-config.1  neuravox-init.1  neuravox-process.1  neuravox-status.1  neuravox.1
neuravox/interfaces/: __init__.py  audio.py  config.py  metadata.py  progress.py  state.py  transcription.py
neuravox/modules/processor/: metadata_output.py
neuravox/modules/shared/: config.py  file_utils.py  progress.py
neuravox/modules/transcriber/: cli.py  config.py  engine.py  prompt_config.py
neuravox/modules/transcriber/models/: openai.py
neuravox/processor/: audio_splitter.py  metadata_output.py
neuravox/scripts/: install-system.sh  install.sh  neuravox-launcher.sh  quick-install.sh  setup.sh
neuravox/shared/: config.py  config.py.backup  config_loader.py  config_models.py  logging_config.py  logging_formats.py  logging_setup.py  metadata.py  progress.py
neuravox/src/neuravox/: __main__.py
neuravox/src/neuravox/cli/: main.py
neuravox/src/neuravox/core/: pipeline.py  state_manager.py
neuravox/src/neuravox/processor/: audio_splitter.py  cli.py
neuravox/src/neuravox/shared/: config.py
neuravox/src/neuravox/transcriber/: cli.py  engine.py  prompt_config.py
neuravox/src/neuravox/transcriber/models/: google_ai.py  openai.py  whisper_local.py
neuravox/tests/: __init__.py  generate_test_audio.py
neuravox/tests/integration/: test_pipeline.py
neuravox/tests/unit/: __init__.py  test_config.py  test_file_utils.py  test_metadata.py  test_progress.py
neuravox/transcriber/: config.py.bak  engine.py
neuravox/transcriber/models/: base.py  google_ai.py  openai.py  whisper_local.py
neuravox/web/: README.md  index.html
neuravox/web/static/css/: demo.css
neuravox/web/static/js/: api.js  config.js  demo.js
scripts/: install.sh
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: test_config.py
