[project]
name = "neuravox"
version = "1.0.0"
description = "Neuravox - Neural audio processing and transcription platform for intelligent audio splitting and multi-model AI transcription"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Neuravox Team", email = "contact@neuravox.io"}
]
keywords = ["audio", "transcription", "ai", "speech-to-text", "audio-processing", "neural-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Audio processing
    "librosa>=0.11.0",
    "soundfile>=0.13.0",
    "scipy>=1.6.0",
    "numpy>=1.24.0",
    "ffmpeg-python>=0.2.0",
    
    # AI/Transcription
    "google-genai>=0.8.0",
    "openai>=1.0.0",
    "openai-whisper>=20231117",
    
    # CLI and UI
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
    
    # Utilities
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "aiofiles>=23.2.1",
    "sqlalchemy>=2.0.0",
    
    # Logging
    "structlog>=23.2.0",
    "python-json-logger>=2.0.7",
    
    # API Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiosqlite>=0.19.0",
    
    # Development
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
neuravox = "neuravox.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neuravox"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

