[project]
name = "audio-transcriber"
version = "0.1.0"
description = "CLI tool for transcribing audio files using various AI models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "librosa>=0.10.0",
    "google-genai>=0.8.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pathlib>=1.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "toml>=0.10.2",
]

[project.scripts]
audio-transcriber = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
