[project]
name = "audio-processing"
version = "2.0.0"
description = "Audio splitter with librosa - real-time progress and efficient processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "soundfile>=0.13.0",
    "numpy>=1.22.0",
    "scipy>=1.6.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
